--- a/static/css/register_style.css
+++ b/static/css/register_style.css
@@ -1,17 +1,23 @@
 /* register_style.css */
 body, html {
-    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; 
     margin: 0;
     font-family: Arial, sans-serif;
 }
 
 .register-container {
-    width: 100%;
+    width: 100%; 
     max-width: 400px;
-    margin: 30px auto;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
+    margin: auto; 
+    padding: 80px; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
+    background: #fff; 
+    border-radius: 10px; 
+	align-items: center;
+    }
 
 h2 {
     text-align: center;
@@ -20,26 +26,39 @@ h2 {
 
 .choice-container {
     display: flex;
-    justify-content: space-around;
-    margin-bottom: 20px;
+    flex-direction: column;
+    align-items: stretch; 
+	width: 100%; 
+    max-width: 400px;
 }
 
 .choice {
+    border: 2px solid #ccc; 
     padding: 10px;
-    border: 1px solid #ccc;
+    border-radius: 5px; 
     cursor: pointer;
-    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+	width: 100%;
+	box-sizing: border-box;
 }
 
+
 .choice img {
-    width: 50px;
-    height: 50px;
-    margin-bottom: 5px;
+    width: 100px; 
+    height: auto; 
+	margin-bottom: 10px;
 }
 
 .choice span {
-    display: block;
+     font-size: 16px; 
+    font-weight: bold;
+    text-align: center; 
 }
+
 
 form input[type="text"],
 form input[type="email"],
