--- a/templates/login.html
+++ b/templates/login.html
@@ -1,24 +1,3 @@
-<!-- templates/login.html -->
-{% load static %}
-<!--<!DOCTYPE html>-->
-<!--<html lang="en">-->
-<!--<head>-->
-<!--    &lt;!&ndash; ... &ndash;&gt;-->
-<!--    <link href="{% static 'css/register_style.css' %}" rel="stylesheet">-->
-<!--</head>-->
-<!--<body>-->
-<!--    <div class="login-container">-->
-<!--        <h2>登录</h2>-->
-<!--        <form method="post" action="{% url 'login' %}">-->
-<!--            {% csrf_token %}-->
-<!--            {{ form.as_p }}-->
-<!--            <button type="submit">登录</button>-->
-<!--        </form>-->
-<!--        <p>没有账号？<a href="{% url 'register' user_type=1 %}">注册</a></p>-->
-<!--    </div>-->
-<!--</body>-->
-<!--</html>-->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -29,7 +8,7 @@
 </head>
 <body>
     <div class="login-container">
-        <h1>FLEXIBLE WORK HUB</h1>
+        <h1>FLEXIBLEWORK HUB </h1>
         <form method="post" action="{% url 'login' %}">
             {% csrf_token %}
             <div class="form-group">
@@ -43,6 +22,7 @@
             <div class="form-actions">
                 <input type="submit" value="Sign In" class="btn" />
                 <input type="button" value="Register" class="btn" onclick="location.href='{% url 'register' user_type=1 %}';" />
+				<input type="button" value="Forgot Password？" class="btn" />
             </div>
         </form>
     </div>
