--- a/templates/employerInfo.html
+++ b/templates/employerInfo.html
@@ -176,50 +176,157 @@ Company Information
     </div>
 </div>
 
+
+
+
+
+
 <div class="bd-sidebar ps-lg-2  pb-4 mb-4 ">
     <div class=list-group>
-        <a href="#" class="list-group-item list-group-item-action">
+        <a href="#item1Content" class="list-group-item list-group-item-action" data-bs-toggle="collapse" role="button"
+            aria-expanded="false" aria-controls="item1Content">
             <div class="d-flex w-100 justify-content-between my-2">
                 <h5 class="mb-1 text-primary">Sales Associate</h5>
                 <small>3 days ago</small>
             </div>
             <p class="mb-1">Salary: £18.90 / hour</p>
         </a>
-        <a href="#" class="list-group-item list-group-item-action">
+        <!-- 包含的application项 -->
+        <div class="collapse" id="item1Content">
+            <div class="list-group">
+                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                    <img src="{% static 'image/person-fill.svg' %}" alt="twbs" width="32" height="32"
+                        class="flex-shrink-0">
+                    <div class="d-flex gap-2 w-100 justify-content-between">
+                        <div>
+                            <h6 class="mb-0">Mike</h6>
+                            <p class="mb-0 opacity-75">123@163.com</p>
+                        </div>
+                        <div class="d-flex gap-2 justify-content-between" role="group" aria-label="Small button group">
+                            <button type="button" class="btn btn-success btn-sm rounded-pill px-3"><i
+                                    class="bi bi-check-lg"></i> Hire</button>
+                            <button type="button" class="btn btn-danger btn-sm rounded-pill px-3"><i
+                                    class="bi bi-x-lg"></i> Reject</button>
+                        </div>
+                    </div>
+                </a>
+                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                    <img src="{% static 'image/person-fill.svg' %}" alt="twbs" width="32" height="32"
+                        class="flex-shrink-0">
+                    <div class="d-flex gap-2 w-100 justify-content-between">
+                        <div>
+                            <h6 class="mb-0">Mike</h6>
+                            <p class="mb-0 opacity-75">123@163.com</p>
+                        </div>
+                        <div class="d-flex gap-2 justify-content-between" role="group" aria-label="Small button group">
+                            <button type="button" class="btn btn-success btn-sm rounded-pill px-3"><i
+                                    class="bi bi-check-lg"></i> Hire</button>
+                            <button type="button" class="btn btn-danger btn-sm rounded-pill px-3"><i
+                                    class="bi bi-x-lg"></i> Reject</button>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <a href="#item2Content" class="list-group-item list-group-item-action" data-bs-toggle="collapse" role="button"
+            aria-expanded="false" aria-controls="item2Content">
             <div class="d-flex w-100 justify-content-between my-2">
                 <h5 class="mb-1 text-primary">Sales Associate</h5>
                 <small>3 days ago</small>
             </div>
             <p class="mb-1">Salary: £18.90 / hour</p>
         </a>
-        <a href="#" class="list-group-item list-group-item-action">
+        <!-- 包含的application项 -->
+        <div class="collapse" id="item2Content">
+            <div class="list-group">
+                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                    <img src="{% static 'image/person-fill.svg' %}" alt="twbs" width="32" height="32"
+                        class="flex-shrink-0">
+                    <div class="d-flex gap-2 w-100 justify-content-between">
+                        <div>
+                            <h6 class="mb-0">Mike</h6>
+                            <p class="mb-0 opacity-75">123@163.com</p>
+                        </div>
+                        <div class="d-flex gap-2 justify-content-between" role="group" aria-label="Small button group">
+                            <button type="button" class="btn btn-success btn-sm rounded-pill px-3"><i
+                                    class="bi bi-check-lg"></i> Hire</button>
+                            <button type="button" class="btn btn-danger btn-sm rounded-pill px-3"><i
+                                    class="bi bi-x-lg"></i> Reject</button>
+                        </div>
+                    </div>
+                </a>
+                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                    <img src="{% static 'image/person-fill.svg' %}" alt="twbs" width="32" height="32"
+                        class="flex-shrink-0">
+                    <div class="d-flex gap-2 w-100 justify-content-between">
+                        <div>
+                            <h6 class="mb-0">Mike</h6>
+                            <p class="mb-0 opacity-75">123@163.com</p>
+                        </div>
+                        <div class="d-flex gap-2 justify-content-between" role="group" aria-label="Small button group">
+                            <button type="button" class="btn btn-success btn-sm rounded-pill px-3"><i
+                                    class="bi bi-check-lg"></i> Hire</button>
+                            <button type="button" class="btn btn-danger btn-sm rounded-pill px-3"><i
+                                    class="bi bi-x-lg"></i> Reject</button>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+
+        <a href="#item3Content" class="list-group-item list-group-item-action" data-bs-toggle="collapse" role="button"
+            aria-expanded="false" aria-controls="item3Content">
             <div class="d-flex w-100 justify-content-between my-2">
                 <h5 class="mb-1 text-primary">Sales Associate</h5>
                 <small>3 days ago</small>
             </div>
             <p class="mb-1">Salary: £18.90 / hour</p>
         </a>
-        <a href="#" class="list-group-item list-group-item-action">
-            <div class="d-flex w-100 justify-content-between my-2">
-                <h5 class="mb-1 text-primary">Sales Associate</h5>
-                <small>3 days ago</small>
+        <!-- 包含的application项 -->
+        <div class="collapse" id="item3Content">
+            <div class="list-group">
+                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                    <img src="{% static 'image/person-fill.svg' %}" alt="twbs" width="32" height="32"
+                        class="flex-shrink-0">
+                    <div class="d-flex gap-2 w-100 justify-content-between">
+                        <div>
+                            <h6 class="mb-0">Mike</h6>
+                            <p class="mb-0 opacity-75">123@163.com</p>
+                        </div>
+                        <div class="d-flex gap-2 justify-content-between" role="group" aria-label="Small button group">
+                            <button type="button" class="btn btn-success btn-sm rounded-pill px-3"><i
+                                    class="bi bi-check-lg"></i> Hire</button>
+                            <button type="button" class="btn btn-danger btn-sm rounded-pill px-3"><i
+                                    class="bi bi-x-lg"></i> Reject</button>
+                        </div>
+                    </div>
+                </a>
+                <a href="#" class="list-group-item list-group-item-action d-flex gap-3 py-3" aria-current="true">
+                    <img src="{% static 'image/person-fill.svg' %}" alt="twbs" width="32" height="32"
+                        class="flex-shrink-0">
+                    <div class="d-flex gap-2 w-100 justify-content-between">
+                        <div>
+                            <h6 class="mb-0">Mike</h6>
+                            <p class="mb-0 opacity-75">123@163.com</p>
+                        </div>
+                        <div class="d-flex gap-2 justify-content-between" role="group" aria-label="Small button group">
+                            <button type="button" class="btn btn-success btn-sm rounded-pill px-3"><i
+                                    class="bi bi-check-lg"></i> Hire</button>
+                            <button type="button" class="btn btn-danger btn-sm rounded-pill px-3"><i
+                                    class="bi bi-x-lg"></i> Reject</button>
+                        </div>
+                    </div>
+                </a>
             </div>
-            <p class="mb-1">Salary: £18.90 / hour</p>
-        </a>
-        <a href="#" class="list-group-item list-group-item-action">
-            <div class="d-flex w-100 justify-content-between my-2">
-                <h5 class="mb-1 text-primary">Sales Associate</h5>
-                <small>3 days ago</small>
-            </div>
-            <p class="mb-1">Salary: £18.90 / hour</p>
-        </a>
+        </div>
     </div>
 </div>
 
 
 <!-- My reviews部分 -->
 <h3 class="pb-4 mb-4 fst-italic border-bottom">
-    My Reviews
+    My Received Feedback
 </h3>
 
 <div class="bd-sidebar ps-lg-2  pb-4 mb-4 ">
