--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
         <div class="container">
             <div class="row flex-nowrap justify-content-between align-items-center">
                 <div class="col-3 pt-1">
-                    <a href="/index" class="blog-header-logo text-body-emphasis text-decoration-none ">
+                    <a href="/job/" class="blog-header-logo text-body-emphasis text-decoration-none ">
                         <span class="fs-5 text-nowrap">FLEXIBLEWORK HUB</span>
                     </a>
                 </div>
@@ -49,10 +49,12 @@
                                 class="rounded-circle">
                         </a>
                         <ul class="dropdown-menu text-small">
-                            <li><a class="dropdown-item" href="#">Profile</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
+                            {% if user.type == 1 %}
+                            <li><a class="dropdown-item" href="{% url 'index_user' %}">Profile</a></li>
+                                {% elif user.type == 2 %}
+                            <li><a class="dropdown-item" href="{% url 'index_employer' %}">Profile</a></li>
+                                {% endif %}
+                            <li><hr class="dropdown-divider"></li>
                             <li><a class="dropdown-item" href="{% url 'logout' %}">Sign out</a></li>
                         </ul>
                     </div>
