--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,18 +14,29 @@
             {% csrf_token %}
             <div class="form-group">
                 <label for="id_username">Email:</label>
-                <input type="text" id="id_username" name="username" required>
+                <input type="text" id="id_username" name="username" value="{{ form.username.value|default_if_none:'' }}" required>
             </div>
             <div class="form-group">
                 <label for="id_password">Password:</label>
                 <input type="password" id="id_password" name="password" required>
+
+                {% if form.non_field_errors %}
+                <div class="error-message">
+                {% for error in form.non_field_errors %}
+                    {{ error }}
+                {% endfor %}
+                </div>
+                {% endif %}
+
             </div>
             <div class="form-actions">
                 <input type="submit" value="Sign In" class="btn" />
                 <input type="button" value="Register" class="btn" onclick="location.href='{% url 'register' user_type=1 %}';" />
-				<input type="button" value="Forgot Password？" class="btn" />
+				<p>Forget the <a href="">password</a>?</p>
             </div>
         </form>
     </div>
 </body>
+<script>
+</script>
 </html>
