--- a/templates/register.html
+++ b/templates/register.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="zh">
 <head>
@@ -5,18 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Register</title>
     <link rel="stylesheet" href="{% static 'css/register_style.css' %}">
-    <style>
-        #backButton {
-            display: none;
-            background: none;
-            border: none;
-            font-size: 18px; 
-            font-weight: bold; 
-            cursor: pointer; 
-            color: #000; 
-            margin-right: auto;
-        }
-    </style>
 </head>
 <body>
     <div class="register-container">
@@ -33,12 +22,49 @@
         </div>
         <form id="CustomUserCreationForm" method="post" action="{% url 'register' 1 %}" style="display: none;">
             {% csrf_token %}
-            <input type="text" name="user_name" placeholder="USERNAME" required>
-            <input type="email" name="email" placeholder="E-MAIL" required>
-            <input type="text" name="phone" placeholder="PHONE" required>
-            <input type="text" name="city" placeholder="CITY" required>
-            <input type="password" name="password1" placeholder="PASSWORD" required>
-            <input type="password" name="password2" placeholder="CONFIRM PASSWORD" required>
+            <input type="hidden" id="formSubmitted" value="{{ form_submitted|default:'False' }}">
+            <div class="form-group">
+                <input type="text" name="user_name" placeholder="USERNAME" value="{{ form.user_name.value|default_if_none:'' }}" required>
+                {% if form.user_name.errors %}
+                <div class="error">{{ form.user_name.errors|first }}</div>
+            {% endif %}
+            </div>
+
+            <div class="form-group">
+                <input type="email" name="email" placeholder="E-MAIL" value="{{ form.email.value|default_if_none:'' }}" required>
+                {% if form.email.errors %}
+                <div class="error">{{ form.email.errors|first }}</div>
+                {% endif %}
+            </div>
+
+            <div class="form-group">
+                <input type="text" name="phone" placeholder="PHONE" value="{{ form.phone.value|default_if_none:'' }}" required>
+                {% if form.phone.errors %}
+                    <div class="error">{{ form.phone.errors|first }}</div>
+                {% endif %}
+            </div>
+
+            <div class="form-group">
+                <input type="text" name="city" placeholder="CITY" value="{{ form.city.value|default_if_none:'' }}" required>
+                {% if form.city.errors %}
+                <div class="error">{{ form.city.errors|first }}</div>
+                {% endif %}
+            </div>
+
+            <div class="form-group">
+                <input type="password" name="password1" placeholder="PASSWORD" required>
+                {% if form.password1.errors %}
+                <div class="error">{{ form.password1.errors|first }}</div>
+                {% endif %}
+            </div>
+
+            <div class="form-group">
+                <input type="password" name="password2" placeholder="CONFIRM PASSWORD" required>
+                {% if form.password2.errors %}
+                    <div class="error">{{ form.password2.errors|first }}</div>
+                {% endif %}
+            </div>
+            <input type="hidden" name="type" id="userTypeField" value="">
             <!-- Move the Back button to this position -->
             <button id="backButton" onclick="goBack()" style="display: none;">Back</button>
             <button type="submit">Register</button>
@@ -46,10 +72,12 @@
         <p>Already have an account？<a href="{% url 'login' %}">Sign in</a></p>
     </div>
 	<div id="registerUrl" data-url="{% url 'register' 1 %}" style="display: none;"></div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
         function setUserType(userType) {
             history.pushState({}, '', '/register/' + userType);
             document.getElementById('CustomUserCreationForm').action = '/register/' + userType + '/';
+            document.getElementById('userTypeField').value = userType;
             // Show form, back button
             document.getElementById('CustomUserCreationForm').style.display = 'block';
             document.getElementById('backButton').style.display = 'inline'; // Show Back Button
@@ -61,6 +89,20 @@
             var registerUrl = document.getElementById('registerUrl').getAttribute('data-url');
             window.location.href = registerUrl;
         }
+
+        document.addEventListener("DOMContentLoaded", function() {
+            var formSubmitted = document.getElementById('formSubmitted').value;
+            var userType = document.getElementById('userTypeField').value;
+
+            if (formSubmitted === 'True') {
+                if (userType) {
+                    setUserType(userType);
+                }
+                document.getElementById('CustomUserCreationForm').style.display = 'block';
+                document.getElementById('backButton').style.display = 'inline';
+                document.querySelector('.choice-container').style.display = 'none';
+            }
+        });
     </script>
 </body>
 </html>
